# python-microscopy

./: .gitattributes  .gitignore  .hgignore  .pre-commit-config.yaml  .pylintrc  23.diff  23_2.diff  ACQUIRE_DEPS.txt  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CREDITS  Dockerfile  LICENCE  PYMEAcquire.log.1  README  README.md  azure-pipelines.yml  bld.bat  build.sh  buildCondaPackage.py  buildCondaPackage_noup.py  codecov.yml  construct.yaml  docker-env.yaml  install_dependencies.py  make_installer.bat  meson.build  meta.yaml  post-install-fixscripts.sh  profile.dmp  profile.txt  profile_cluster.txt  pyproject.toml  python-pyme-depends.deb  required-modules.txt  requirements.txt  roadmap.rst  run_tests.sh  run_tests_27.bat  (+10 more)
PYME/: COPYING  LICENCE  UNIT_TEST_README  __init__.py  apistatus.py  config.py  install_dependencies.py  meson.build  recommended-modules.txt  setup.py  setup_exe.py  update_version.py  version.py  warnings.py
PYME/Acquire/: ActionManager.py  ExecTools.py  FrSpool.py  HDFSpoolFrame.py  HDFSpooler.py  HTTPHDFSpooler.py  HTTPSpooler.py  HTTPSpooler_v2.py  MetaDataHandler.py  MetaDataHandler.py.orig  PYMEAcquire.py  QueueSpooler.py  SpoolController.py  Spooler.py  __init__.py  acquire_app.py  acquire_client.py  acquire_server.py  acquirebase.py  acquiremainframe.py  acquirewx.py  acquisition_backends.py  acquisition_base.py  actions.py  aqavg.py  autofocus.py  chanpanel.py  eventLog.py  event_loop.py  fastTiler.py  frameWrangler.py  funcs.py  interlock.py  intsliders.py  lasersliders.py  logging.json  logging.yaml  manualroi.py  meson.build  microscope.py  (+24 more)
PYME/Analysis/: CameraMaps.py  MetaData.py  MetaDataEdit.py  MetadataTree.py  SimReconstruction.py  __init__.py  _fithelpers.py  angleFilter.py  annealThresh.py  autoencoder_classifier.py  binAvg.py  buffers.py  composite.py  cramerRao.py  deTile.py  density_filter.py  distributed_pyramid.py  driftTracking.py  expectationMaximisation.py  fiducial_matching.py  fusionUtils.py  gen_sCMOS_maps.py  graphing_filters.py  implicitFilter.py  keep_pairs.py  meson.build  moments.py  multicolourMeta.py  ofind.py  ofind3d.py  ofind_nofilt.py  ofind_pri.py  ofind_split.py  ofind_xcorr.py  ofind_xcorr_fw.py  optic_flow.py  piecewise.py  piecewiseMapping.py  piezo_movement_correction.py  pointFitConfoc.py  (+14 more)
PYME/DSView/: .cvsignore  DisplayOptionsPanel.py  OpenSequenceDialog.py  OverlaysPanel.py  PYMEImage.py  __init__.py  arrayViewPanel.py  dataExporter.py  dataWrap.py  displayOptions.py  displaySettingsPanel.py  dsviewer.py  dsviewer_npy_nb.py  eventLogViewer.py  fitInfo.py  htmlServe.py  image.py  logparser.py  meson.build  overlays.py  point_overlay.py  scrolledImagePanel.py  serve.py  setup.py  splashScreen.py  viewpanellite.py  voxSizeDialog.py
PYME/Deconv/: .cvsignore  __init__.py  beadGen.py  block_dec.py  dec.py  decTask.py  decThread.py  dec_test.py  deccs.py  deccs2.py  deccs_mc.py  deconvDialogs.py  fftwWisdom.py  gen_2ph_4piA_psf.m  read_kdf.py  richardsonLucy.py  richardsonLucyMV.py  richardsonLucyMVM.py  tcluster.py  test_block_dec.py  tq_block_dec.py  wiener.py  write_kdf.py
PYME/FileUtils/: PZFFormat.py  TiffSeqToHdf5.py  fileID.py  h5-thumbnailer.py  h5ToTiffSeries.py  h5r-thumbnailer.py  h5rToTxt.py  kdfToImage.py  nameUtils.py  readSpeckle.py  readTiff.py  write_kdf.py
PYME/IO/: HDFSpooler.py  HTTPSpooler.py  HTTPSpooler_v2.py  MetaDataHandler.py  PZFFormat.py  QueueSpooler.py  Spooler.py  __init__.py  acquisition_backends.py  buffer_helpers.pyx  buffers.py  clusterDuplication.py  clusterExport.py  clusterGlob.py  clusterIO.py  clusterListing.py  clusterResults.py  clusterUpload.py  cluster_directory.py  cluster_spooling.py  cluster_streaming.py  compatibility.py  csv_flavours.py  dataExporter.py  dataWrap.py  dcimg.py  events.py  h5File.py  h5rFile.py  http_tabular.py  image.py  load_psf.py  meson.build  nose_tests.py  pyme_h5ls.py  ragged.py  rgb_image.py  setup.py  speedtest_dataserver.py  tabular.py  (+4 more)
PYME/LMVis/: .cvsignore  PYMEVisualise.py  VideoView.py  View.py  VisGUI.py  __init__.py  colourFilterGUI.py  colourPanel.py  displayPane.py  dyeRatios.py  editFilterDialog.py  fastGraph.py  filterPane.py  gen3DTriangs.py  genImageDialog.py  gl_offScreenHandler.py  gl_program.py  gl_render.py  gl_render3D.py  gl_render3D_shaders.py  gl_shaderLoader.py  gl_test_apps.py  gl_test_objects.py  gl_texture.py  glcanvas_core.py  h5rNoGui.py  imageView.py  imageView2.py  importTextDialog.py  inpFilt.py  layer_panel.py  layer_wrapper.py  meson.build  mv_math.py  objectDarkMeasure.py  objectMeasure.py  pipeline.py  pointSettingsPanel.py  progGraph.py  progGraphC.py  (+16 more)
PYME/PSFEst/: .cvsignore  dec.py  extractImages.py
PYME/PSFGen/: fourierHNA.py  genCRBcurves.py  ps_app.c  setup.py  test_ps_app.py
PYME/ParallelTasks/: DSTaskQueue.py  HDFTaskQueue.py  HTTPDataServer.py  HTTPRulePusher.py  HTTPTaskPusher.py  PYMEDistributor.py  PYMENodeServer.py  PYMERuleNodeServer.py  PYMERuleServer.py  __init__.py  clusterIO.py  dataserver_wsgi.py  distribution.py  distributor.py  fitMonP.py  httpSpoolTarget.py  launchOnlyWorkers.py  launchWorkers.py  nodeserver.py  relativeFiles.py  rulenodeserver.py  ruleserver.py  setup_exe.py  taskDef.py  taskQueue.py  taskServerM.py  taskServerML.py  taskServerMP.py  taskServerZC.py  taskWorkerHTTP.py  taskWorkerML.py  taskWorkerMP.py  taskWorkerZC.py  webdav.py  webframework.py
PYME/SampleDB/: populate.py  settings.py
PYME/SampleDB2/: __init__.py  batchDrift.py  manage.py  populate.py  populateStats.py
PYME/__SampleDB/: .cvsignore  batchDrift.py  manage.py  populate.py  populateStats.py  settings.py  urls.py
PYME/bcl/: bcl.c  bcl.pyx  setup.py  style.css
PYME/cSMI/: BaseRenderer.cpp  DataStack.h  LUTRGBRenderer.cpp  LineProfile.h  __init__.py  cSMI.i  cSMI.py  cSMI_wrap.cpp  displayopts.h  excepts.h  setup.py
PYME/cluster/: HTTPDataServer.py  HTTPRulePusher.py  HTTPTaskPusher.py  PYMERuleNodeServer.py  PYMERuleServer.py  _rules.py  cluster_of_one.py  dataserver_wsgi.py  distribution.py  launch_cluster.py  rulenodeserver.py  rules.py  ruleserver.html  ruleserver.py  (+3 more)
(+3245 files in other folders)
