[build-system]
#requires = ["setuptools>=61.0", "numpy==1.21", "cython"]
#build-backend = "setuptools.build_meta"
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy', 'cython']

[project]
name = "python-microscopy"
version = "25.06.05" # will be updated automatically
authors = [
  { name="David Baddeley", email="d.baddeley@auckland.ac.nz" },
]
description = "Tools for (super-resolution) microscopy data analysis and microsope control"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/python-microscopy/pymecompress"
