[build-system]
#requires = ["setuptools>=61.0", "numpy==1.21", "cython"]
#build-backend = "setuptools.build_meta"
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy', 'cython']

[project]
name = "python-microscopy"
version = "25.06.05" # will be updated automatically
authors = [
  { name="David Baddeley", email="d.baddeley@auckland.ac.nz" },
]
description = "Tools for (super-resolution) microscopy data analysis and microsope control"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.22",
  "scipy",
  "matplotlib",
  "wxpython",
  "cython",
  "tables",
  "pyopengl",
  "traits",
  "traitsui>=7.6.0",
  "pyface>=7.6.0",
  "pillow",
  "toposort",
  "networkx",
  "pyfftw",
  "cherrypy",
  "scikit-image",
  "scikit-learn",
  "zeroconf", #[py3k] #<=0.26.3 [py3k]
  "requests",
  "pandas",
  "pyyaml",
  "psutil",
  "docutils",
  "sphinx",
  "ujson>=3.0.0",
  "jinja2",
  #"pycairo",
  "pymecompress>=0.2.0",
  "six",
  "future",
  #"pywin32 [win]"
  "blosc", 
  "django>=2.1",
  #"mpld3", #TODO - optional?
  #"tifffile", [optional - we ship an internal (but old) version]

]

[project.scripts]
dh5view = "PYME.DSView.PYMEImage:main"
PYMEImage = "PYME.DSView.PYMEImage:main"
PYMEAcquire = "PYME.Acquire.PYMEAcquire:main"
VisGUI = "PYME.LMVis.PYMEVisualise:main"
PYMEVis = "PYME.LMVis.PYMEVisualise:main"
PYMEVisualize = "PYME.LMVis.PYMEVisualise:main"
PYMEVisualise = "PYME.LMVis.PYMEVisualise:main"
PYMEBatch = "PYME.recipes.batchProcess:main"
bakeshop = "PYME.recipes.bakeshop_app:main"
PYMEDataServer = "PYME.cluster.HTTPDataServer:main"
PYMEClusterDup = "PYME.io.clusterDuplication:main"
PYMERuleServer = "PYME.cluster.PYMERuleServer:main"
PYMENodeServer = "PYME.cluster.PYMENodeServer:main"
PYMERuleNodeServer = "PYME.cluster.PYMERuleNodeServer:main"
PYMEClusterOfOne = "PYME.cluster.cluster_of_one:main"
#PYMEWebDav = "PYME.cluster.webdav:main"
PYMEscmosmapgen = "PYME.Analysis.gen_sCMOS_maps:main"
#fitMonP = "PYME.ParallelTasks.fitMonP:main"
#taskWorkerZC = "PYME.ParallelTasks.taskWorkerZC:main"
#taskServerZC = "PYME.ParallelTasks.taskServerZC:main"
#slaunchWorkers = "PYME.ParallelTasks.launchWorkers:main"

[project.urls]
"Homepage" = "https://www.python-microscopy.org"
